--- a/save-points/00-Starting-point/BlazingPizza.Client/wwwroot/index.html
+++ b/save-points/00-Starting-point/BlazingPizza.Client/wwwroot/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="img/icon-512.png" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
+    <link href="css/ribbonButton.css" rel="stylesheet" />
     <link href="_content/BlazingPizza.ComponentsLibrary/leaflet/leaflet.css" rel="stylesheet" />
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
     <title>Blazing Pizza</title>
