mysql-migration inprogress

--- a/src/BlazingPizza.Client/wwwroot/index.html
+++ b/src/BlazingPizza.Client/wwwroot/index.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="manifest.json" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="_content/BlazingPizza.ComponentsLibrary/leaflet/leaflet.css" rel="stylesheet" />
+    <link href="_content/BlazingPizza.ComponentsLibrary/leaflet/leaflet.css" rel="stylesheet" />    
     <title>Blazing Pizza</title>
 </head>
 <body>
@@ -22,5 +22,7 @@
     <script src="_content/BlazingPizza.ComponentsLibrary/deliveryMap.js"></script>
     <script src="_content/BlazingPizza.ComponentsLibrary/leaflet/leaflet.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="js/Helpers.js"></script>
+    <script src="js/sweetalert2.js"></script>
 </body>
 </html>
