--- a/src/BlazingPizza.Client/wwwroot/index.html
+++ b/src/BlazingPizza.Client/wwwroot/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <base href="/" />
-    <link rel="icon" href="img/icon-512.png" />
+    <link rel="icon" href="img/ANDEN_LOGO.svg" />
     <link rel="manifest" href="manifest.json" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="_content/BlazingPizza.ComponentsLibrary/leaflet/leaflet.css" rel="stylesheet" />    
+    <link href="_content/BlazingPizza.ComponentsLibrary/leaflet/leaflet.css" rel="stylesheet" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
     <title>Blazing Pizza</title>
 </head>
 <body>
@@ -21,8 +22,9 @@
     <script src="_content/BlazingPizza.ComponentsLibrary/pushNotifications.js"></script>
     <script src="_content/BlazingPizza.ComponentsLibrary/deliveryMap.js"></script>
     <script src="_content/BlazingPizza.ComponentsLibrary/leaflet/leaflet.js"></script>
-    <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <!--<script>navigator.serviceWorker.register('service-worker.js');</script>-->
     <script src="js/Helpers.js"></script>
     <script src="js/sweetalert2.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 </html>
