--- a/src/BlazingPizza.Client/wwwroot/index.html
+++ b/src/BlazingPizza.Client/wwwroot/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>-->
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <base href="/"/>
-    <link rel="icon" href="img/ANDEN_LOGO.svg"/>
+    <link rel="icon" href="img/ANDEN_LOGO_light.svg"/>
     <link rel="manifest" href="manifest.json"/>
     <!--<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet"/>-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link href="_content/Blazorise/blazorise.css" rel="stylesheet"/>
     <link href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" rel="stylesheet"/>
-
     <link href="css/site.css" rel="stylesheet"/>
     <link href="_content/BlazingPizza.ComponentsLibrary/leaflet/leaflet.css" rel="stylesheet"/>
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
+    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet"/>
     <title>Blazing Pizza</title>
 </head>
 <body>
@@ -40,5 +41,6 @@
     <script src="_content/Blazorise.Charts/blazorise.charts.js"></script>
     <script src="_content/Blazorise/blazorise.js"></script>
     <script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script>
+    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
 </body>
 </html>
