--- a/src/BlazingPizza.Client/wwwroot/index.html
+++ b/src/BlazingPizza.Client/wwwroot/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="utf-8"/>
     <!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>-->
@@ -8,19 +8,33 @@
     <link rel="icon" href="img/ANDEN_LOGO_light.svg"/>
     <link rel="manifest" href="manifest.json"/>
     <!--<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet"/>-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
-    <link href="_content/Blazorise/blazorise.css" rel="stylesheet"/>
-    <link href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" rel="stylesheet"/>
-    <link href="css/site.css" rel="stylesheet"/>
-    <link href="_content/BlazingPizza.ComponentsLibrary/leaflet/leaflet.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="_content/Blazorise/blazorise.css"/>
+    <link rel="stylesheet" href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css"/>
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
-    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet"/>
-    <title>Blazing Pizza</title>
+    <link rel="stylesheet" href="_content/MatBlazor/dist/matBlazor.css"/>
+    <link rel="stylesheet" href="_content/BlazingPizza.ComponentsLibrary/leaflet/leaflet.css"/>
+    <link rel="stylesheet" href="css/site.css"/>
+
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Kosugi|Kosugi+Maru|M+PLUS+1p:100,300,400,500,700,800,900|M+PLUS+Rounded+1c:100,300,400,500,700,800,900|Noto+Sans+JP:100,300,400,500,700,900|Noto+Serif+JP:200,300,400,500,600,700,900|Sawarabi+Gothic|Sawarabi+Mincho&display=swap');
+    </style>
+    <title>AD-PHI</title>
 </head>
 <body>
     <app>
         <div class="loading-bar"></div>
+        <h1 class="loader">
+            <span>L</span>
+            <span>O</span>
+            <span>A</span>
+            <span>D</span>
+            <span>I</span>
+            <span>N</span>
+            <span>G</span>
+        </h1>
     </app>
 
     <script src="_framework/blazor.webassembly.js"></script>
