--- a/src/BlazingPizza.Client/wwwroot/index.html
+++ b/src/BlazingPizza.Client/wwwroot/index.html
@@ -5,7 +5,7 @@
     <!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>-->
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <base href="/"/>
-    <link rel="icon" href="img/ANDEN_LOGO_light.svg"/>
+    <link rel="icon" href="img/AD_LOGO-light.svg"/>
     <link rel="manifest" href="manifest.json"/>
     <!--<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet"/>-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -25,28 +25,19 @@
     <title>AD-PHI</title>
 </head>
 <body>
+
+    <!--App.razor-->
     <app>
         <div class="loading-bar"></div>
-        <!--<h1 class="loader">
-            <span>L</span>
-            <span>O</span>
-            <span>A</span>
-            <span>D</span>
-            <span>I</span>
-            <span>N</span>
-            <span>G</span>
-        </h1>-->
     </app>
 
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="_content/BlazingPizza.ComponentsLibrary/localStorage.js"></script>
     <script src="_content/BlazingPizza.ComponentsLibrary/pushNotifications.js"></script>
     <script src="_content/BlazingPizza.ComponentsLibrary/deliveryMap.js"></script>
     <script src="_content/BlazingPizza.ComponentsLibrary/leaflet/leaflet.js"></script>
     <!--<script>navigator.serviceWorker.register('service-worker.js');</script>-->
     <script src="js/Helpers.js"></script>
     <script src="js/sweetalert2.js"></script>
-    <!--<script src="js/TableExtension.js"></script>-->
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 
     <!-- inside of body section and after the <app> tag  -->
